add category, update product
